--- a/client/src/styles/Product.css
+++ b/client/src/styles/Product.css
@@ -2,7 +2,7 @@
 .product {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: flex-end;
     margin: 10px;
     padding: 20px;
