--- a/client/src/styles/Product.css
+++ b/client/src/styles/Product.css
@@ -5,22 +5,21 @@
     align-items: left;
     justify-content: flex-end;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
-    max-height: 400px;
-    min-width: 100px;
-    background-color: white;
-    z-index: 1;
   }
 
   .product > img {
-    max-height: 200px;
-    width: 100%;
-    object-fit: contain;
-    margin-bottom: 15px;
+    height: 200px;
+    width: 200x;
+    object-fit: fill;
+    border-radius: 30px;
+    padding: 10px;
+    margin-bottom: -35px;
+    
   }
 
   .product_info {
-    height: 100px;
-    margin-bottom: 15px;
+    
+    padding: 15px;
   }
