--- a/client/src/styles/SellerLandingPage.css
+++ b/client/src/styles/SellerLandingPage.css
@@ -10,28 +10,33 @@
   }
   .bottomleft {
     position: absolute;
-    bottom: 32px;
-    left: 40px;
+    bottom: 20px;
+    left: 110px;
     font-size: 32px;
     font-weight: bold;
   }
   .spunchbob { 
-    width: 50%;
+    width: 60%;
+    display: block;
+    margin-left: 60px;
     opacity: 0.5;
     z-index: -1;
-    max-height: 200px;
+    max-height: 400px;
     border-radius: 30px;
     padding: 15px;
   }
 
-  .header_image { 
-    width: 50%;
+  .headerimage { 
+    width: 60%;
+    display: block;
+    margin-left: 60px;
     opacity: 0.5;
     z-index: -1;
-    max-height: 200px;
+    max-height: 400px;
     border-radius: 30px;
     padding: 15px;
   }
+
 
   li{
     float: left;
