--- a/client/src/styles/customerLandingPage.css
+++ b/client/src/styles/customerLandingPage.css
@@ -1,12 +1,13 @@
 .customerLandingPage {
-  display: flex;
+  display: block;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1000px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1800px;
 }
 
 .header{
+  display: block;
   position: relative;
 }
 
@@ -20,21 +21,12 @@
 } 
 
 .bigPhoto {
-  width: 1000px;
+  width: 1700px;
   height: 300px;
   opacity: 0.5;
   z-index: -1;
   border-radius: 50px;
   padding: 30px;
-}
-
-.smallPhoto {
-  width: 25%;
-  opacity: 1;
-  z-index: -1;
-  max-height: 200px;
-  border-radius: 30px;
-  padding: 15px;
 }
 
 li{
@@ -44,8 +36,4 @@ li{
 ul{
   list-style-type: none;
   overflow: hidden;
-}
-
-br{
-  display: block;
 }
