--- a/client/src/styles/carousel.css
+++ b/client/src/styles/carousel.css
@@ -1,59 +1,49 @@
-* {box-sizing:border-box}
 
-/* Slideshow container */
+
 .carousel {
-  max-width: 1700px;
-  position: relative;
-  margin: auto;
-  overflow: hidden;
-}
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: flex-end;
+    margin: 10px;
+    padding: 10px;
+    width: 100%;
+  }
 
-.carouselSlide {
-  display: inline-block;
-  width: 1700px;
-  height: 300px;
-  opacity: 0.5;
-  z-index: -1;
-  border-radius: 50px;
-  padding: 30px;
-}
+  .carouselCard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    &:hover {
+      transform: scale(0.9);
+      box-shadow: 5px 5px 8px rgba(222, 222, 222, 0.362),
+        10px 10px 8px rgba(152, 133, 133, 0.392),
+        15px 15px 8px rgba(139, 154, 139, 0.303);
+    }
+    border-radius: 20%;
+    background: rgb(41, 40, 40);
+  }
 
-.carouselText {
-  position: absolute;
-  bottom: 32px;
-  left: 40px;
-  font-size: 32px;
-  font-weight: bold;
-  padding: 10px;
-}
+  .carouselCard > img {
+    height: 80%;
+    width: 80%;
+    border-radius: 10%;
+  }
 
-.carouselSlider {
-  white-space: nowrap;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+  .carouselTrack {
+    display: flex;
+    position: absolute;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    gap: 16px;
+    width: 200%;
+    height: 100%;
+  }
