--- a/client/src/styles/carousel.css
+++ b/client/src/styles/carousel.css
@@ -1,49 +1,56 @@
 
 
 .carousel {
+    height: 300px;
+    width: 1700px;
     overflow: hidden;
     position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 10px;
-    width: 100%;
+    display: block;
+    margin: 0px;
+    padding: 80px;
+    border-radius: 10px;
   }
 
   .carouselCard {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    &:hover {
-      transform: scale(0.9);
-      box-shadow: 5px 5px 8px rgba(222, 222, 222, 0.362),
-        10px 10px 8px rgba(152, 133, 133, 0.392),
-        15px 15px 8px rgba(139, 154, 139, 0.303);
-    }
-    border-radius: 20%;
-    background: rgb(41, 40, 40);
   }
 
   .carouselCard > img {
-    height: 80%;
-    width: 80%;
-    border-radius: 10%;
+    width: 1700px;
+    height: 300px;
+    opacity: 0.5;
+    border-radius: 50px;
+    padding: 30px;
+  }
+
+  .carouselText {
+    position: absolute;
+    bottom: 32px;
+    left: 40px;
+    font-size: 32px;
+    font-weight: bold;
+    padding: 10px;
   }
 
   .carouselTrack {
+    width: 200%;
+    height: 100%;
     display: flex;
     position: absolute;
     left: 0;
     justify-content: center;
     align-items: center;
-    height: 80px;
-    gap: 16px;
-    width: 200%;
-    height: 100%;
+    height: 20px;
+    gap: 10px;
+    animation: slide 20s linear infinite;
+  }
+
+  @keyframes slide {
+    0% {
+      left: 0;
+    }
+    100% {
+      left: -100%;
+    }
   }
