--- a/client/src/styles/carousel.css
+++ b/client/src/styles/carousel.css
@@ -7,12 +7,12 @@
     position: relative;
     display: block;
     margin: 0px;
-    padding: 80px;
+    padding: 30px;
     border-radius: 10px;
   }
 
   .carouselCard {
-    display: flex;
+    display: block;
     align-items: center;
   }
 
@@ -20,14 +20,14 @@
     width: 1700px;
     height: 300px;
     opacity: 0.5;
-    border-radius: 50px;
-    padding: 30px;
+    border-radius: 40px;
+    padding: 0px;
   }
 
   .carouselText {
-    position: absolute;
-    bottom: 32px;
-    left: 40px;
+    position: relative;
+    top: 80px;
+    left: 60px;
     font-size: 32px;
     font-weight: bold;
     padding: 10px;
@@ -41,7 +41,7 @@
     left: 0;
     justify-content: center;
     align-items: center;
-    height: 20px;
+    height: 300px;
     gap: 10px;
     animation: slide 20s linear infinite;
   }
