--- a/client/src/styles/customerLandingPage.css
+++ b/client/src/styles/customerLandingPage.css
@@ -13,7 +13,7 @@
 
 .bigPhotoText {
   position: absolute;
-  bottom: 32px;
+  bottom: 50px;
   left: 40px;
   font-size: 32px;
   font-weight: bold;
@@ -21,7 +21,7 @@
 } 
 
 .bigPhoto {
-  width: 1700px;
+  width: 100%;
   height: 300px;
   opacity: 0.5;
   z-index: -1;
