carousel and navbar dummies done on customer side

--- a/client/src/styles/customerLandingPage.css
+++ b/client/src/styles/customerLandingPage.css
@@ -1,3 +1,8 @@
+/* Author: Isa Luluquisin
+// Description: Script contains formatting for the non-navbar and non-carousel components
+// of the customerLandingPage.js
+*/
+
 .customerLandingPage {
   display: block;
   justify-content: center;
