--- a/client/src/styles/carousel.css
+++ b/client/src/styles/carousel.css
@@ -1,4 +1,6 @@
-
+/* Author: Isa Luluquisin
+// Description: Script contains formatting of the different carousel components.
+*/
 
 .carousel {
     height: 300px;
@@ -36,13 +38,17 @@
 
   .carouselTrack {
     width: 200%;
-    height: 100%;
+    height: 300px;
     display: flex;
     position: absolute;
     left: 0;
-    height: 300px;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
-    animation: slide 20s linear infinite;
+    animation: slide 50s linear infinite;
+    &:hover {
+      animation-play-state: paused;
+    }
   }
 
   @keyframes slide {
