--- a/client/src/styles/Product.css
+++ b/client/src/styles/Product.css
@@ -1,25 +1,22 @@
 
 .product {
-    display: flex;
-    flex-direction: column;
+    display: block;
     align-items: left;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 10px;
-    width: 100%;
+    margin: 20px;
+    padding: 30px;
+    width: 400px;
+    height: 250px;
   }
 
   .product > img {
-    height: 200px;
-    width: 200x;
     object-fit: fill;
-    border-radius: 30px;
+    width: 400px;
+    height: 250px;
+    border-radius: 20px;
     padding: 10px;
-    margin-bottom: -35px;
-    
+    margin-bottom: -15px;
   }
 
   .product_info {
-    
-    padding: 15px;
+    padding: 0px;
   }
