--- a/client/src/styles/Product.css
+++ b/client/src/styles/Product.css
@@ -1,22 +1,26 @@
 
-.product {
+  .header{
     display: block;
-    align-items: left;
-    margin: 20px;
-    padding: 30px;
-    width: 400px;
-    height: 250px;
+    position: relative;
   }
-
-  .product > img {
+  
+  .productPhoto {
     object-fit: fill;
-    width: 400px;
-    height: 250px;
-    border-radius: 20px;
-    padding: 10px;
-    margin-bottom: -15px;
+    width: 300px;
+    height: 200px;
+    border-radius: 40px;
+    padding: 20px;
+  } 
+  
+  .productTitle {
+    position: relative;
+    bottom: 20px;
+    left: 20px;
+    font-size: 15px;
+    padding: 5px;
   }
 
-  .product_info {
-    padding: 0px;
+  .productInfo {
+    font-size: 15px;
+    padding: 5px;
   }
