--- a/client/src/styles/SuggestedContent.css
+++ b/client/src/styles/SuggestedContent.css
@@ -1,6 +1,6 @@
 .category{
     margin-left: 75px;
     font-weight: bold;
-    font-size: 80;
-    margin-bottom: -35px;
+    font-size: 20px;
+    margin-bottom: -25px;
 }
