--- a/client/src/styles/customerLandingPage.css
+++ b/client/src/styles/customerLandingPage.css
@@ -6,32 +6,9 @@
 .customerLandingPage {
   display: block;
   justify-content: center;
-  margin-left: 75px;
-  margin-right: 75px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1800px;
-}
-
-.header{
-  display: block;
-  position: relative;
-}
-
-.bigPhotoText {
-  position: absolute;
-  bottom: 50px;
-  left: 40px;
-  font-size: 32px;
-  font-weight: bold;
-  padding: 10px;
-} 
-
-.bigPhoto {
-  width: 100%;
-  height: 300px;
-  opacity: 0.5;
-  z-index: -1;
-  border-radius: 50px;
-  padding: 30px;
 }
 
 li{
