--- a/client/src/assets/Product.css
+++ b/client/src/assets/Product.css
@@ -2,6 +2,7 @@
   .header{
     display: block;
     position: relative;
+    overflow: hidden;
   }
   
   .productPhoto {
@@ -12,15 +13,10 @@
     padding: 20px;
   } 
   
-  .productTitle {
+  .productInfo{
     position: relative;
     bottom: 20px;
     left: 20px;
-    font-size: 15px;
-    padding: 5px;
-  }
-
-  .productInfo {
     font-size: 15px;
     padding: 5px;
   }
