--- a/client/src/assets/SellerLandingPage.css
+++ b/client/src/assets/SellerLandingPage.css
@@ -1,49 +1,17 @@
 .sellerLandingPage {
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1500px;
-  }
-  .header{
-    position: relative;
-  }
-  .bottomleft {
-    position: absolute;
-    bottom: 20px;
-    left: 110px;
-    font-size: 32px;
-    font-weight: bold;
-  }
+  display: block;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1800px;
+}
 
-  .headerimage { 
-    width: 60%;
-    display: block;
-    margin-left: 60px;
-    opacity: 0.5;
-    z-index: -1;
-    max-height: 400px;
-    border-radius: 30px;
-    padding: 15px;
-  }
+.product {
+  float: left;
+}
 
-
-  li{
-    float: left;
-  }
-
-  ul{
-    list-style-type: none;
-    overflow: hidden;
-  }
-
-
-
-    
-
-
-
-
-
-
-  
+.suggested_content {
+  width: 100%;
+  clear: both;
+  overflow-x: scroll;
+}
