--- a/client/src/assets/customerLandingPage.css
+++ b/client/src/assets/customerLandingPage.css
@@ -11,11 +11,12 @@
   max-width: 1800px;
 }
 
-li{
-  float: left;
+.product{
+ float: left;
 }
 
-ul{
-  list-style-type: none;
-  overflow: hidden;
+.suggested_content{
+  position: relative;
+  overflow-x: scroll;
+
 }
